k8s/base/django.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
    tier: backend
spec:
  type: NodePort
  selector:
    app: django
    tier: backend
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      tier: backend
  template:
    metadata:
      labels:
        app: django
        tier: backend
    spec:
      containers:
        - name: django
          image: the_project_local_django:latest
          command: ["python", "manage.py", "runserver"]
          ports:
            - name: http-server
              containerPort: 8000
