k8s/base/mailhog.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  labels:
    app: the_project
    tier: smtp
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app: the_project
    tier: smtp
  ports:
    - port: 8025
      targetPort: smtp-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  labels:
    app: the_project
    tier: smtp
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the_project
      tier: smtp
  template:
    metadata:
      labels:
        app: the_project
        tier: smtp
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.0
          ports:
            - name: smtp-server
              containerPort: 8025
