k8s/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: the_project
    tier: db
    environment: dev
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: the_project
    tier: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: the_project
    tier: db
    environment: dev
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: the_project
      tier: db
  template:
    metadata:
      labels:
        app: the_project
        tier: db
    spec:
      containers:
        - name: postgres
          image: postgres:12.7
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume-mount
              mountPath: /var/lib/postgresql/data
          # readinessProbe:
          #   exec:
          #     command:
          #       - bash
          #       - "-c"
          #       - "psql -U$POSTGRES_USER -d$POSTGRES_DB -c 'SELECT 1'"
          #   initialDelaySeconds: 15
          #   timeoutSeconds: 2
          # livenessProbe:
          #   exec:
          #     command:
          #       - bash
          #       - "-c"
          #       - "psql -U$POSTGRES_USER -d$POSTGRES_DB -c 'SELECT 1'"
          #   initialDelaySeconds: 15
          #   timeoutSeconds: 2
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc
