k8s/base/react.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: my_awesome_sixie_project
    tier: frontend
    environment: dev
spec:
  type: NodePort
  selector:
    app: my_awesome_sixie_project
    tier: frontend
  ports:
    - port: 3000
      targetPort: http-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: my_awesome_sixie_project
    tier: frontend
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my_awesome_sixie_project
      tier: frontend
  template:
    metadata:
      labels:
        app: my_awesome_sixie_project
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: my_awesome_sixie_project_local_frontend:latest
          ports:
            - name: http-server
              containerPort: 3000
