k8s/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: the_project
    tier: caching
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app: the_project
    tier: caching
  ports:
    - port: 6379
      targetPort: redis-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: the_project
    tier: caching
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the_project
      tier: caching
  template:
    metadata:
      labels:
        app: the_project
        tier: caching
    spec:
      containers:
        - name: redis
          image: redis:6.0.5
          ports:
            - name: redis-server
              containerPort: 6379
